--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 </div>    
 </section>
-<script src="/bootstrap-5.2.2-dist/bootstrap-5.2.2-dist/js/bootstrap.min.js"></script>
+<!-- <script src="/bootstrap-5.2.2-dist/bootstrap-5.2.2-dist/js/bootstrap.min.js"></script> -->
   </body>
 
 <!-- footer  -->
