--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                <li class="main"><a href="#">Home</a></li>
                <li class="main"><a href="#skills">Skills</a></li>
                <li class="main"><a href="#projects">Projects</a></li>
-               <li class="main"><a href="#contact">Get In Touch</a></li>        
+               <li class="main"><a href="#contact">Get In Touch</a></li>
             </ul>
         </div>
     </nav>
@@ -159,7 +159,10 @@
     </div>
 </div>    
 </section>
-<!-- <script src="/bootstrap-5.2.2-dist/bootstrap-5.2.2-dist/js/bootstrap.min.js"></script> -->
+<script src="/bootstrap-5.2.2-dist/bootstrap-5.2.2-dist/js/bootstrap.min.js"></script>
+
+ <script src="index.js"></script>
+
   </body>
 
 <!-- footer  -->
