--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <h3>GitHub</h3>
                     </div>
                     <div class="level">
-                        Experiance: to host websites.
+                        Experience: to host websites.
                     </div>
                 </div>
                     <div class="skill-box">
