--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
      a <span style="color: #2ecc71;"> front-end developer</span>.
   </div>
  <button type="button">
- <a class="button" href="Shahd Bahamdoon CV (1).pdf"; target="_blank">Download CV <i class="fas fa-download"></i></a>
+ <a class="button" href="Shahd Bahamdoon resume.pdf"; target="_blank">Download CV <i class="fas fa-download"></i></a>
  </button> 
 </h1>
 </div> 
