--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <h3>HTML5</h3>
                     </div>
                     <div class="level">
-                        Level: 90%, Good.
+                        Level: Good.
                     </div>
                 </div>
                 <div class="skill-box">
@@ -71,7 +71,7 @@
                         <h3>CSS3</h3>
                     </div>
                     <div class="level">
-                        Level: 75%, Good.
+                        Level: Good.
                     </div>
                 </div>
                  <div class="skill-box">
@@ -83,7 +83,7 @@
                          <h3>JavaScript</h3>
                     </div>
                     <div class="level">
-                        Level: 20%, currently studying it .
+                        Level: 40%, currently studying it .
                     </div>
                 </div> 
                  <div class="skill-box">
