--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <ul>
         <li class="contact-box">
          <h4><i class="fa-solid fa-phone"> </i></h4>
-         <h4 class="space"> <span class="info"> Phone Number:</span> +97334407299</h4>
+         <h4 class="space"> <span class="info"> Phone Number:</span> +966570150136</h4>
          </li>
          <div class="line"></div>
          <li class="contact-box">
@@ -165,9 +165,9 @@
         </li>
         <div class="line"></div>
         <li class="contact-box">
-            <h4><a href="https://instagram.com/shahd.dev?utm_source=qr&igshid=MzNlNGNkZWQ4Mg==">
-            <i class="fa-brands fa-instagram"></i></h4>
-            <h4 class="space"> <span class="info">Instagram:</span> shahd.dev</h4>
+            <h4><a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BEp%2FXq60JSresT1JM2jIEdg%3D%3D">
+            <i class="fa-brands fa-linkedin"></i></h4>
+            <h4 class="space"> <span class="info">Instagram:</span> shahd-Bahamdoon</h4>
             </a>
         </li>
       </ul>
