--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <li class="contact-box">
             <h4><a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BEp%2FXq60JSresT1JM2jIEdg%3D%3D">
             <i class="fa-brands fa-linkedin"></i></h4>
-            <h4 class="space"> <span class="info">Instagram:</span> shahd-Bahamdoon</h4>
+            <h4 class="space"> <span class="info">LinkedIn:</span> shahd-Bahamdoon</h4>
             </a>
         </li>
       </ul>
